# SpaceTravLR_rust

./: .gitignore  Cargo.toml  README.md  compare_perturb.py  compare_splash.py  skills-lock.json  spaceship_config.toml  spaceship_config.xenium_skin_batch7.toml
.agent/skills/: single_cell_spatial_transcriptomics_SKILL.md
assets/: run_summary_example.html  run_summary_genes.js  run_summary_report.css
benchmarks/tabular_io_runs/: RESULTS.md
scripts/: load_cnn_npz_pytorch.py
src/: adata_query.rs  betadata.rs  betadata_view.rs  cnn_gating.rs  condition_split.rs  config.rs  estimator.rs  lib.rs  ligand.rs  main.rs  model.rs  network.rs  perturb.rs  perturb_mode.rs  run_summary_html.rs  spatial_estimator.rs  training_demo.rs  training_hud.rs  training_log.rs  training_tui.rs  transition_umap.rs
src/lasso/: fista.rs  group_lasso.rs  mod.rs  prox.rs  singular_values.rs  subsampling.rs
tests/: test_betadata.rs  test_condition_split.rs  test_perturb.rs
web/spatial_viewer/: index.html  mcp-app.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vite.mcp.config.ts
web/spatial_viewer/mcp/: server.ts
web/spatial_viewer/src/: cellTypePalette.ts  colormaps.ts  main.ts  mcpBridge.ts  style.css
web/spatial_viewer/vite-stubs/: child_process.ts
