[package]
name = "space_trav_lr_rust"
version = "0.1.0"
edition = "2024"

[profile.dev]
incremental = true

[dependencies]
burn = { version = "0.16.1", features = ["wgpu", "train"] }
burn-autodiff = { version = "0.16.1" }
dssim = "3.2"
image = "0.25"
rgb = "0.8"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
approx = "0.5"
indicatif = { version = "0.17", features = ["rayon"] }
anndata = "0.6"
anndata-hdf5 = "0.5"
# Add polars if needed for dataframes, but maybe anndata handles it
polars = { version = "0.51", features = ["lazy", "ndarray", "dtype-full", "parquet"] }
anyhow = "1.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ndarray-npy = "0.9"
polars-utils = "0.51"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.32"

