[package]
name = "space_trav_lr_rust"
version = "0.1.0"
edition = "2024"
description = "Spatial gene regulatory network inference and in-silico perturbation (Rust port of SpaceTravLR)"
readme = "README.md"
repository = "https://github.com/Koushul/SpaceTravLR_rust"
license = "MIT"
keywords = ["spatial", "transcriptomics", "grn", "single-cell", "machine-learning"]
categories = ["science", "command-line-utilities"]
rust-version = "1.85"
exclude = [".agent/", ".agents/", ".claude/", "skills-lock.json"]
default-run = "spacetravlr"
autobins = false

[profile.dev]
incremental = true

[profile.release]
lto = "thin"
codegen-units = 1

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:sysinfo"]
dev-main = []

[[bin]]
name = "spacetravlr"
path = "src/bin/spacetravlr.rs"

[[bin]]
name = "space_trav_lr_rust"
path = "src/main.rs"
required-features = ["dev-main"]

[dependencies]
burn = { version = "0.16.1", features = ["wgpu", "train", "ndarray"] }
burn-autodiff = { version = "0.16.1" }
pollster = "0.4"
wgpu = "23.0"
ndarray = { version = "0.16", features = ["rayon"] }
rayon = "1.10"
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
approx = "0.5"
indicatif = { version = "0.17", features = ["rayon"] }
anndata = "0.6"
anndata-hdf5 = "0.5"
polars = { version = "0.51", default-features = false, features = [
    "lazy",
    "ndarray",
    "parquet",
    "csv",
    "ipc",
    "decompress",
    "strings",
    "temporal",
    "fmt",
    "zip_with",
] }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
ndarray-npy = "0.9"
polars-utils = "0.51"
ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
sysinfo = { version = "0.32", optional = true }
build_html = "2.7"
serde_json = "1"
chrono = "0.4"
glob = "0.3"
flate2 = "1"
nalgebra-sparse = "0.11"
kiddo = "5.3.0"

